namespace TemplateMethod.Company
{
    public enum OrderType
    {
        Individual,
        Corporate
    }
}